--- a/aurelia-oidc-client-ts/dev-app/app.html
+++ b/aurelia-oidc-client-ts/dev-app/app.html
@@ -10,8 +10,16 @@
     Please read the <a href="README.md">README</a> file in your project for more
     information.
   </p>
+  <!-- 
+  <div>
+    <label for="redirectUrlId">RedirectUrl</label>
+    <input id="redirectUrlId" value.bind="redirectUrl" />
+  </div>
 
-  <input value.bind="redirectUrl" />
-  <button>SetupClient</button>
-  <button>Login</button>
+  <div>
+    <label for="authorityUrlId">AuthorityUrl</label>
+    <input id="authorityUrlId" value.bind="authorityUrl" />
+  </div>
+  <button click.delegate="setupClient()">SetupClient</button> -->
+  <button click.delegate="login()">Login</button>
 </template>
